# meta-analysis-mcp-server

./: .dockerignore  .gitignore  =0.11.0  Dockerfile  README.md  cochrane_tools.py  comprehensive_test_report.json  comprehensive_test_report.py  comprehensive_test_results.json  corrected_r_demo_results.json  debug_r_output.py  debug_server.py  debug_server_stderr.py  demo_cochrane_workflow.py  demo_workflow.py  deployment_success_report.md  deployment_summary.md  direct_test_results.json  direct_tool_test.py  docker-compose.yml  extended_mcp_server.py  extended_protocol_handler.py  fly.toml  generate_visualizations.py  install_r_packages.R  investigate_mcp_types.py  investigate_notification_structure.py  mcp_server.py  package-lock.json  pyproject.toml  r_integration_demo_results.json  r_integration_test_results.json  railway.json  requirements-deploy.txt  requirements.txt  simple_mcp_test.py  test_all_tools_comprehensive.py  test_client_scenario.py  test_corrected_r_demo.py  test_deployment_readiness.py  (+14 more)
.github/workflows/: ci.yml  deploy.yml
docs/: USAGE.md  demo_workflow.py  deployment.md
meta_analysis_mcp_server/: __init__.py  __main__.py  http_server.py  models.py  server.py
meta_analysis_mcp_server/tools/: __init__.py  cochrane_compliance.py  meta_analysis.py
r_scripts/: meta_analysis.R
templates/: cochrane_report_template.Rmd  cochrane_report_template.html  report_template.Rmd
tests/: test_meta_analysis_server.py
